--- a/presentacion_dos/presentacion/test.bib
+++ b/presentacion_dos/presentacion/test.bib
@@ -1,3 +1,14 @@
+@misc{fronteras,
+  doi = {10.48550/ARXIV.1806.03581},
+  url = {https://arxiv.org/abs/1806.03581},
+  author = {Topiwala,  Anirudh and Inani,  Pranav and Kathpal,  Abhishek},
+  keywords = {Robotics (cs.RO),  FOS: Computer and information sciences,  FOS: Computer and information sciences},
+  title = {Frontier Based Exploration for Autonomous Robot},
+  publisher = {arXiv},
+  year = {2018},
+  copyright = {arXiv.org perpetual,  non-exclusive license}
+}
+
 @book{murphy2000,
 author = {Murphy, Robin R.},
 title = {Introduction to AI Robotics},
@@ -40,6 +51,17 @@ edition = {1st}
   year = {1988},
   pages = {435–461}
 }
+
+@INPROCEEDINGS{nbvprrt,
+  author={Bircher, Andreas and Kamel, Mina and Alexis, Kostas and Oleynikova, Helen and Siegwart, Roland},
+  booktitle={2016 IEEE International Conference on Robotics and Automation (ICRA)}, 
+  title={Receding Horizon "Next-Best-View" Planner for 3D Exploration}, 
+  year={2016},
+  volume={},
+  number={},
+  pages={1462-1468},
+  keywords={Vehicles;Robot sensing systems;Space exploration;Planning;Navigation;Three-dimensional displays},
+  doi={10.1109/ICRA.2016.7487281}}
 
 @ARTICLE{slam_dur,
   author={Durrant-Whyte, H.F.},
@@ -450,6 +472,17 @@ eprint = {https://www.science.org/doi/pdf/10.1126/scirobotics.aaw9710}}
     month = {Junio},
     school = {CINVESTAV Unidad Tamaulipas},
     url={https://repositorio.cinvestav.mx/handle/cinvestav/69?locale-attribute=en}
+}
+
+@misc{amanda,
+  doi = {10.48550/ARXIV.2109.12343},
+  url = {https://arxiv.org/abs/2109.12343},
+  author = {Prorok,  Amanda and Malencia,  Matthew and Carlone,  Luca and Sukhatme,  Gaurav S. and Sadler,  Brian M. and Kumar,  Vijay},
+  keywords = {Robotics (cs.RO),  Machine Learning (cs.LG),  Multiagent Systems (cs.MA),  Systems and Control (eess.SY),  FOS: Computer and information sciences,  FOS: Computer and information sciences,  FOS: Electrical engineering,  electronic engineering,  information engineering,  FOS: Electrical engineering,  electronic engineering,  information engineering},
+  title = {Beyond Robustness: A Taxonomy of Approaches towards Resilient Multi-Robot Systems},
+  publisher = {arXiv},
+  year = {2021},
+  copyright = {arXiv.org perpetual,  non-exclusive license}
 }
 
 @INPROCEEDINGS{james,
